# matrym-hashchain

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: RESULTS.md  bench_append.py
scripts/hooks/: pre-commit
src/hashchain/: __init__.py  __main__.py  cli.py  conformance.py
tests/: test_cli.py  test_conformance.py  test_hashchain.py
