[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrym-hashchain"
version = "0.1.1"
description = "A tamper-evident, append-only, hash-chained ledger. Dependency-free (stdlib only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Josh Evans (MatrymLabs)" }]
keywords = [
  "audit",
  "integrity",
  "tamper-evident",
  "hash-chain",
  "append-only",
  "ledger",
  "provenance",
  "compliance",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
matrym-hashchain = "hashchain.cli:main"

[project.urls]
Homepage = "https://github.com/MatrymLabs/matrym-hashchain"
Repository = "https://github.com/MatrymLabs/matrym-hashchain"
Changelog = "https://github.com/MatrymLabs/matrym-hashchain/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hashchain = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests", "benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
